<resources>
    <string name="app_name">PetGuardian</string>

    //FormLogin e FormCadastro
    <string name="ErrorCampos">Preencha todos os campos!</string>
    <string name="HintSenha">Senha</string>
    <string name="HintEmail">Email</string>
    <string name="HintNome">Nome</string>
    <string name="entrar">Entrar</string>
    <string name="text_cadastro">Crie uma conta clicando aqui</string>
    <string name="title_cadastro">Cadastre-se</string>
    <string name="salvar">Salvar</string>

    //Menu
    <string name="Deslogar">Deslogar</string>
    <string name="TitleHome">Home</string>
    <string name="TitleTarefas">Tarefas</string>
    <string name="TitlePerfil">Perfil</string>
    <string name="TitleSair">Sair</string>
    <string name="open_nav">Abrir</string>
    <string name="close_nav">Fechar</string>

    //Lista
    <string name="HintBusca">Buscar...</string>

    //Adapter
    <string name="delete_confirmation">Confirmação</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="sureToDelete">Tem certeza que deseja deletar essa tarefa?</string>

    //Register
    <string name="TitleReg">Registro de Tarefa</string>
    <string name="RegNome">Nome...</string>
    <string name="RegDesc">Descrição...</string>
    <string name="RegData">Data...</string>
    <string name="RegHora">Hora...</string>
    <string name="RegSalvar">Salvar</string>
</resources>