<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/TitleHome"
            android:icon="@drawable/nav_home"/>

        <item
            android:id="@+id/nav_profile"
            android:title="@string/TitlePerfil"
            android:icon="@drawable/ic_user2"/>

        <item
            android:id="@+id/nav_list"
            android:title="@string/TitleTarefas"
            android:icon="@drawable/ic_list"/>
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/nav_logout"
                android:title="@string/TitleSair"/>
        </menu>
    </item>

</menu>