<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cor1"
    tools:context=".list.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:background="@drawable/border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TitleReg"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/cor1"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_image"
                android:id="@+id/uploadImage"
                android:layout_marginTop="10dp"
                app:tint = "@color/cor1"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/uploadTopic"
                android:background="@drawable/border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/RegNome"
                android:textColorHint="@color/grey"
                android:gravity="start|center_vertical"
                android:textColor="@color/lavender"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/uploadDesc"
                android:background="@drawable/border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/RegDesc"
                android:textColorHint="@color/grey"
                android:gravity="start|center_vertical"
                android:textColor="@color/lavender"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/border"
                android:layout_marginTop="20dp"
                android:id="@+id/uploadDate"
                android:padding="16dp"
                android:text="@string/RegData"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:gravity="start|center_vertical"
                tools:ignore="MissingPrefix"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/border"
                android:layout_marginTop="20dp"
                android:id="@+id/uploadTime"
                android:padding="16dp"
                android:text="@string/RegHora"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:gravity="start|center_vertical"
                tools:ignore="MissingPrefix"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/RegSalvar"
                android:id="@+id/saveButton"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                app:cornerRadius = "20dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>